--- a/wear/src/main/res/layout/activity_location_permission.xml
+++ b/wear/src/main/res/layout/activity_location_permission.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wearable.view.BoxInsetLayout
+<androidx.wear.widget.BoxInsetLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -32,12 +32,12 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <android.support.wearable.view.CircledImageView
+            <androidx.wear.widget.CircledImageView
                 android:id="@+id/circle"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:circle_radius="20dp"
-                app:circle_color="#0086D4"
+                app:circleRadius="20dp"
+                app:circleColor="#0086D4"
                 android:src="@drawable/ic_lock_open_white_24dp"/>
 
             <androidx.legacy.widget.Space
@@ -55,4 +55,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</android.support.wearable.view.BoxInsetLayout>
+</androidx.wear.widget.BoxInsetLayout>
